# esp32-webcam

./: .gitignore  .gitmodules  CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig  sdkconfig.esp32cam
scripts/: flash_manual.sh
src/: CMakeLists.txt  Kconfig.projbuild  app_dimmer.c  app_httpd.c  app_main.c
src/include/: app_dimmer.h
